# site-Tzm0306

./: pyproject.toml  server.py
config/: content.htm  content_backup.htm  sitetitle
content/: About.html  Brython.html  HW.html  NX-1.html  NX-2.html  NX.html  Onshape-1.html  Onshape-2.html  Onshape.html  Solvespace.html  W10.html  W11.html  index.html  sitemap.html  tipuesearch_content.js  w13.html  w14.html  w6.html
downloads/: nx1.7z  nx2.7z  nx3.7z  w13-1.7z  w13-2.7z  w13-3.7z  w13-5.7z
